Changes for HEADER, MENUBAR and FOLLOWME
HEADER - Added new background for tablet and mobile
MENUBAR - Improved mobile menu
FOLLOWME - Changed the width of a list with links to socialmedia

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="menubar">
             <a class="menubar-logo" href="#home"></a>
             <ul class="menubar-links">
-                <li class="active"><a href="#aboutme">About me</a></li>
-                <li><a href="#works">Works</a></li>
-                <li><a href="#followme">Follow me</a></li>
-                <li><a href="#contact">Contact me</a></li>
+                <li class="active"><a href="#aboutme" class="js-menulink">About me</a></li>
+                <li><a href="#works" class="js-menulink">Works</a></li>
+                <li><a href="#followme" class="js-menulink">Follow me</a></li>
+                <li><a href="#contact" class="js-menulink">Contact me</a></li>
             </ul>
             <button class="menubar-togglemenu icon icon-bars"></button>
         </div>
