--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <script src="js/libs/jquery-3.3.1.min.js"></script>
         <script src="js/libs/owl.carousel.min.js"></script>
         <script src="js/libs/jquery.validate.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts.min.js"></script>
         
     </body>
 </html>
